Project_12/k8s/deploy.yaml
# auth-service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploypg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authpg
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: authpg
    spec:
      containers:
        - name: auth-servicepg
          image: ishrakadit07/auth_servicepg
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# auth-service Service
apiVersion: v1
kind: Service
metadata:
  name: auth-servicepg
spec:
  selector:
    app: authpg
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
# payment-service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploypg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentpg
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: paymentpg
    spec:
      containers:
        - name: payment-servicepg
          image: ishrakadit07/payment_servicepg
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# payment-service Service
apiVersion: v1
kind: Service
metadata:
  name: payment-servicepg
spec:
  selector:
    app: paymentpg
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
---
# client Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deploypg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientpg
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: clientpg
    spec:
      containers:
        - name: clientpg
          image: ishrakadit07/project_web
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# client Service
apiVersion: v1
kind: Service
metadata:
  name: client-servicepg
spec:
  type: ClusterIP
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
  selector:
    app: clientpg
