Project_12/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pg-ingress
  annotations:
    konghq.com/strip-path: "true"
    # konghq.com/plugins: cors
spec:
  ingressClassName: kong
  rules:
    - host: back.district12.xyz
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-servicepg
                port:
                  number: 8000
          - path: /pay
            pathType: Prefix
            backend:
              service:
                name: payment-servicepg
                port:
                  number: 8001
    - host: front.district12.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-servicepg
                port:
                  number: 5173
